# monotone-kvm

./: .gitignore  README.md  bench.md  pyproject.toml
scripts/: bench_comprehensive.py  bench_flex.py  bench_triton.py  demo_kvm.py  demo_monotone.py  sweep.py  test_schedulers.py  train_demo.py  viz_buckets.py
src/monotone_kvm/: __init__.py  helpers.py  kvm.py  model.py  monotone.py  plain.py  scheduler.py
src/monotone_kvm/attention/: __init__.py  kvm.py  monotone.py  monotone_flex.py  plain.py
src/monotone_kvm/triton/: __init__.py  common.py  entry.py  kvm_phase1.py  monotone_phase1.py  phase2.py
