[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monotone-kvm"
version = "0.0.1"
description = "KVM attention with monotone deterministic bucket schedules"
authors = [
    { name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["black", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Triton kernels use single-letter uppercase tensor-pointer names (Q, K, V, O,
# BK, ...) by convention; E741 (ambiguous variable name) doesn't apply to them.
ignore = ["E741"]
